feat: Enhance website with new video content and localization improvements
- Updated sections.css to include styles for video elements and added comments for clarity.
- Modified index.html to improve SEO with data attributes for translation and updated service descriptions.
- Added new localization keys in en.json, es.json, and pt-br.json for improved service titles and descriptions.
- Created new HTML files for Lumasky services in English and Spanish, enhancing multilingual support.
- Implemented video hover functionality in script.js for better user interaction with service items.
- Added new video files for service showcases to enrich content presentation.

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,7 +1,7 @@
 {
   "pageTitle": "DronyImagem - Drone Solutions",
   "metaDescription": "Specialists in drone filming, aerial live streaming, and drone light shows. Transform your event into a visual spectacle.",
-  "metaKeywords": "drone, aerial filming, drone show, drone lights, drone footage, mato grosso, cuiaba, dronyimagem",
+  "metaKeywords": "drone, aerial filming, drone show, drone lights, drone footage, mato grosso, cuiaba, dronyimagem, brazil",
   "ogTitle": "DronyImagem - Drone Solutions",
   "ogDescription": "Specialists in drone filming, aerial live streaming, and drone light shows. Transform your event into a visual spectacle.",
   "ogSiteName": "DronyImagem",
@@ -18,11 +18,11 @@
   "heroButton": "Discover Our Solutions",
   "servicesTitle": "🚁 OUR SERVICES",
   "servicesSubtitle": "From the sky to your audience: filming, streaming, and spectacles.",
-  "service1Title": "🎬 Professional Aerial Filming",
-  "service1Desc": "Capture every detail of your event with high-resolution drone filming. Ideal for concerts, weddings, corporate events, advertising campaigns, and institutional productions. Our drones record unique angles that highlight the grandeur and energy of your event.",
-  "service2Title": "📡 Aerial Live Streaming",
+  "serviceRealEstateTitle": "📸 Aerial Real Estate Imagery",
+  "serviceRealEstateDesc": "Enhance your property or development with high-quality aerial photos and videos. Highlight the location, infrastructure, and unique features impactfully for your clients.",
+  "serviceEventsTitle": "🎬 Aerial Event Videos",
   "service2Desc": "Surprise your audience with a live broadcast made by drones, showing your event in real time with stable, high-quality images. Perfect for festivals, fairs, sports, and corporate events that need visual impact and complete coverage.",
-  "service3Title": "🌟 Drone Light Shows",
+  "serviceLumaskyTitle": "✨ Lumasky Representative in Brazil",
   "service3Desc": "Enchant the audience with a drone show synchronized with lights and music. Perfect for event openings, brand activations, inaugurations, and special celebrations. Each show is planned with exclusive scripts, animations, and choreographies, making the sky the main stage of your event.",
   "portfolioTitle": "🎥 PORTFOLIO / WORK",
   "portfolioSubtitle": "From aerial filming to drone light shows, DronyImagem has transformed corporate events, festivals, and audiovisual productions into unique visual experiences. Check out our projects and see how our aerial filming and drone shows impact the audience in every detail.",
