--- a/locales/es.json
+++ b/locales/es.json
@@ -1,7 +1,7 @@
 {
   "pageTitle": "DronyImagem - Soluciones con Drones",
   "metaDescription": "Especialistas en filmación con drones, transmisión aérea en vivo y shows de drones con luces. Transforma tu evento en un espectáculo visual.",
-  "metaKeywords": "drone, filmación aérea, show de drones, drones luces, filmación con drone, mato grosso, cuiabá, dronyimagem",
+  "metaKeywords": "drone, filmación aérea, show de drones, drones luces, filmación con drone, mato grosso, cuiabá, dronyimagem, brasil",
   "ogTitle": "DronyImagem - Soluciones con Drones",
   "ogDescription": "Especialistas en filmación con drones, transmisión aérea en vivo y shows de drones con luces. Transforma tu evento en un espectáculo visual.",
   "ogSiteName": "DronyImagem",
@@ -18,11 +18,11 @@
   "heroButton": "Descubre Nuestras Soluciones",
   "servicesTitle": "🚁 NUESTROS SERVICIOS",
   "servicesSubtitle": "Del cielo a tu audiencia: filmación, transmisión y espectáculos.",
-  "service1Title": "🎬 Filmación Aérea Profesional",
-  "service1Desc": "Capta cada detalle de tu evento con una filmación con drone en alta resolución. Ideal para conciertos, bodas, eventos corporativos, campañas publicitarias y producciones institucionales. Nuestros drones registran ángulos únicos que destacan la grandiosidad y la energía de tu evento.",
-  "service2Title": "📡 Transmisión Aérea en Vivo",
+  "serviceRealEstateTitle": "📸 Imágenes aéreas de inmuebles",
+  "serviceRealEstateDesc": "Valoriza tu inmueble o proyecto con fotos y videos aéreos de alta calidad. Destaca la ubicación, infraestructura y diferenciales de forma impactante para tus clientes.",
+  "serviceEventsTitle": "🎬 Videos aéreos de eventos",
   "service2Desc": "Sorprende a tu público con una transmisión en vivo hecha por drones, mostrando tu evento en tiempo real con imágenes estables y de alta calidad. Perfecto para festivales, ferias, eventos deportivos y corporativos que necesitan impacto visual y cobertura completa.",
-  "service3Title": "🌟 Show de Drones con Luces",
+  "serviceLumaskyTitle": "✨ Representante Lumasky en Brasil",
   "service3Desc": "Encanta al público con un show de drones sincronizados con luces y música. Perfecto para aperturas de eventos, activaciones de marca, inauguraciones y celebraciones especiales. Cada show es planificado con guion, animaciones y coreografías exclusivas, convirtiendo el cielo en el escenario principal de tu evento.",
   "portfolioTitle": "🎥 PORTAFOLIO / TRABAJOS",
   "portfolioSubtitle": "Desde filmaciones aéreas hasta espectáculos de luces con drones, DronyImagem ha transformado eventos corporativos, festivales y producciones audiovisuales en experiencias visuales únicas. Revisa nuestros proyectos y ve cómo nuestras filmaciones aéreas y shows de drones impactan al público en cada detalle.",
