--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -18,13 +18,13 @@
   "heroButton": "Descubra Nossas Soluções",
   "servicesTitle": "🚁 NOSSOS SERVIÇOS",
   "servicesSubtitle": "Do céu ao seu público: filmagem, transmissão e espetáculos.",
-  "service1Title": "🎬 Filmagem Aérea Profissional",
-  "service1Desc": "Capte cada detalhe do seu evento com uma filmagem com drone em alta resolução. Ideal para shows, casamentos, eventos corporativos, campanhas publicitárias e produções institucionais. Nossos drones registram ângulos únicos que destacam a grandiosidade e a energia do seu evento.",
-  "service2Title": "📡 Transmissão Aérea Ao Vivo",
+  "serviceRealEstateTitle": "📸 Imagens aéreas de imóveis",
+  "serviceRealEstateDesc": "Valorize seu imóvel ou empreendimento com fotos e vídeos aéreos de alta qualidade. Destaque a localização, infraestrutura e diferenciais de forma impactante para seus clientes.",
+  "serviceEventsTitle": "🎬 Vídeos aéreos de eventos",
   "service2Desc": "Surpreenda seu público com uma transmissão ao vivo feita por drones, mostrando seu evento em tempo real com imagens estáveis e de alta qualidade. Perfeito para festivais, feiras, eventos esportivos e corporativos que precisam de impacto visual e cobertura completa.",
-  "service3Title": "🌟 Show de Drones com Luzes",
+  "serviceLumaskyTitle": "✨ Representante Lumasky no Brasil",
   "service3Desc": "Encante o público com um show de drones sincronizados com luzes e música. Perfeito para aberturas de eventos, ativações de marca, inaugurações e celebrações especiais. Cada show é planejado com roteiro, animações e coreografias exclusivas, tornando o céu o palco principal do seu evento.",
-  "portfolioTitle": "🎥 PORTFÓLIO / TRABALHO",
+  "portfolioTitle": "🎥 PORTFólio / TRABALHO",
   "portfolioSubtitle": "De filmagens aéreas a espetáculos de luzes com drones, a DronyImagem já transformou eventos corporativos, festivais e produções audiovisuais em experiências visuais únicas. Confira nossos projetos e veja como nossas filmagens aéreas e shows de drones impactam o público em cada detalhe.",
   "portfolioBtnPhotos": "📸 Galeria de Fotos",
   "portfolioBtnVideos": "🎬 Galeria de Vídeos",
@@ -44,7 +44,7 @@
   "value3Desc": "Garantimos precisão técnica e qualidade cinematográfica em cada voo. Nossa equipe especializada captura ângulos únicos com total segurança, valorizando sua marca.",
   "missionTitle": "NOSSA MISSÃO",
   "missionSubtitle": "Ser o elo entre o céu e a visão criativa, elevando a percepção e o impacto dos seus projetos.",
-  "missionDesc": "Nossa missão é transformar seu evento em um espetáculo visual memorável. Usamos tecnologia aérea de ponta—de filmagens cinematográficas a shows de luzes—para contar sua história do alto, com segurança, criatividade e impacto.",
+  "missionDesc": "Nossa missão é transformar seu evento em um espetáculo visual memorable. Usamos tecnologia aérea de ponta—de filmagens cinematográficas a shows de luzes—para contar sua história do alto, com segurança, criatividade e impacto.",
   "contactTitle": "ENTRE EM CONTATO",
   "contactSubtitle": "Vamos conversar sobre o seu próximo projeto aéreo!",
   "formName": "Nome:",
