Add video gallery page and update index links; improve localization and remove obsolete Lumasky pages

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,11 +1,11 @@
 {
   "pageTitle": "DronyImagem - Drone Solutions",
-  "metaDescription": "Specialists in drone filming, aerial live streaming, and drone light shows. Transform your event into a visual spectacle.",
-  "metaKeywords": "drone, aerial filming, drone show, drone lights, drone footage, mato grosso, cuiaba, dronyimagem, brazil",
+  "metaDescription": "Experts in drone filming, aerial live streaming, and drone light shows. Transform your event into a visual spectacle.",
+  "metaKeywords": "drone, aerial filming, drone show, light drones, drone footage, mato grosso, cuiaba, dronyimagem",
   "ogTitle": "DronyImagem - Drone Solutions",
-  "ogDescription": "Specialists in drone filming, aerial live streaming, and drone light shows. Transform your event into a visual spectacle.",
+  "ogDescription": "Experts in drone filming, aerial live streaming, and drone light shows. Transform your event into a visual spectacle.",
   "ogSiteName": "DronyImagem",
-  "headerLogo": "DronyImagem",
+
   "navSolutions": "Solutions",
   "navPortfolio": "Portfolio",
   "navAbout": "About",
@@ -13,49 +13,62 @@
   "navMission": "Mission",
   "navLumasky": "Lumasky",
   "navContact": "Contact Us",
+
   "heroTitle": "FLY HIGH<br />CREATE VISION",
-  "heroSubtitle": "DronyImagem specializes in drone filming, aerial live streaming, and drone light shows, creating unique experiences that delight audiences and enhance your brand.",
+  "heroSubtitle": "DronyImagem specializes in drone filming, aerial live streaming, and drone light shows, creating unique experiences that captivate audiences and enhance your brand.",
   "heroButton": "Discover Our Solutions",
-  "servicesTitle": "🚁 OUR SERVICES",
-  "servicesSubtitle": "From the sky to your audience: filming, streaming, and spectacles.",
-  "serviceRealEstateTitle": "📸 Aerial Real Estate Imagery",
-  "serviceRealEstateDesc": "Enhance your property or development with high-quality aerial photos and videos. Highlight the location, infrastructure, and unique features impactfully for your clients.",
+
+  "servicesTitle": "Solutions",
+  "servicesSubtitle": "From sky to audience: filming, streaming, and spectacles.",
+  "serviceRealEstateTitle": "📸 Aerial Real Estate Images",
+  "serviceRealEstateDesc": "Enhance your property or development with high-quality aerial photos and videos. Highlight location, infrastructure, and unique features in an impactful way for your clients.",
   "serviceEventsTitle": "🎬 Aerial Event Videos",
-  "service2Desc": "Surprise your audience with a live broadcast made by drones, showing your event in real time with stable, high-quality images. Perfect for festivals, fairs, sports, and corporate events that need visual impact and complete coverage.",
+  "service2Desc": "Surprise your audience with a live drone broadcast, showcasing your event in real-time with stable, high-quality images. Perfect for festivals, trade shows, sports, and corporate events that need visual impact and comprehensive coverage.",
   "serviceLumaskyTitle": "✨ Lumasky Representative in Brazil",
-  "service3Desc": "Enchant the audience with a drone show synchronized with lights and music. Perfect for event openings, brand activations, inaugurations, and special celebrations. Each show is planned with exclusive scripts, animations, and choreographies, making the sky the main stage of your event.",
-  "portfolioTitle": "🎥 PORTFOLIO / WORK",
-  "portfolioSubtitle": "From aerial filming to drone light shows, DronyImagem has transformed corporate events, festivals, and audiovisual productions into unique visual experiences. Check out our projects and see how our aerial filming and drone shows impact the audience in every detail.",
+  "service3Desc": "Delight the audience with a drone show synchronized with lights and music. Perfect for event openings, brand activations, inaugurations, and special celebrations. Each show is planned with a unique script, animations, and choreographies, making the sky the main stage of your event.",
+
+  "portfolioTitle": "Portfolio",
+  "portfolioSubtitle": "From aerial filming to drone light spectacles, DronyImagem has transformed corporate events, festivals, and audiovisual productions into unique visual experiences. Check out our projects and see how our aerial footage and drone shows impact audiences in every detail.",
   "portfolioBtnPhotos": "📸 Photo Gallery",
   "portfolioBtnVideos": "🎬 Video Gallery",
-  "aboutTitle": "🧭 ABOUT",
+
+  "aboutTitle": "About",
   "aboutSubtitle": "Technology, creativity, and innovation in the air",
-  "aboutIntro": "Created by two brothers from Mato Grosso fascinated by technology and passionate about constant evolution.",
-  "aboutP1": "At DronyImagem, we combine professional aerial filming, live image transmission, and drone shows with synchronized lights to transform events into memorable experiences.",
-  "aboutP2": "Our team consists of professionals specialized in audiovisuals and drone piloting, ready to record every moment with cinematic quality, safety, and technical precision.",
-  "aboutP3": "We believe that every flight is an opportunity to tell a new story — from above, with emotion and impact. With DronyImagem, your event gains a new perspective and the visibility it deserves.",
-  "valuesTitle": "OUR VALUES",
-  "valuesSubtitle": "The principles that guide our vision and excellence in every service.",
+  "aboutIntro": "Founded by two brothers from Mato Grosso, fascinated by technology and passionate about constant evolution.",
+  "aboutP1": "At DronyImagem, we combine professional aerial filming, live image transmission, and synchronized drone light shows to transform events into memorable experiences.",
+  "aboutP2": "Our team consists of professionals specialized in audiovisuals and drone piloting, ready to capture every moment with cinematic quality, safety, and technical precision.",
+  "aboutP3": "We believe every flight is an opportunity to tell a new story — from above, with emotion and impact. With DronyImagem, your event gains a new perspective and the visibility it deserves.",
+
+  "valuesTitle": "Values",
+  "valuesSubtitle": "Below are the key points that guide our brand value:",
   "value1Title": "Memorable Experiences",
-  "value1Desc": "We unite technology and creativity to tell stories from above. We transform your event into a unique visual spectacle that enchants and evokes emotion.",
+  "value1Desc": "We combine technology and creativity to tell stories from above. We transform your event into a unique visual spectacle that enchants and generates emotion.",
   "value2Title": "Innovation and Technology",
   "value2Desc": "We use cutting-edge aerial technology—from light shows to live streams—to give your event a new perspective and the visual impact it deserves.",
   "value3Title": "Quality and Safety",
-  "value3Desc": "We guarantee technical precision and cinematic quality in every flight. Our specialized team captures unique angles with complete safety, valuing your brand.",
-  "missionTitle": "OUR MISSION",
-  "missionSubtitle": "To be the link between the sky and creative vision, elevating the perception and impact of your projects.",
-  "missionDesc": "Our mission is to transform your event into a memorable visual spectacle. We use cutting-edge aerial technology—from cinematic filming to light shows—to tell your story from above, with safety, creativity, and impact.",
-  "contactTitle": "GET IN TOUCH",
+  "value3Desc": "We guarantee technical precision and cinematic quality in every flight. Our specialized team captures unique angles with total safety, valuing your brand.",
+
+  "missionTitle": "Mission",
+  "missionSubtitle": "To be a creative vision from above, elevating the perception and impact of your projects.",
+  "missionDesc": "Our mission is to transform your event into a memorable visual spectacle. We use cutting-edge aerial technology, from cinematic filming to light shows—to tell your story from above, with safety, creativity, and impact.",
+
+  "contactTitle": "CONTACT US",
   "contactSubtitle": "Let's talk about your next aerial project!",
   "formName": "Name:",
   "formEmail": "Email:",
-  "formMessage": "Message:",
+  "formPhone": "Phone:",
+  "formMessage": "Describe a bit about your event or project:",
   "formSubmit": "Send Message",
   "contactAltText": "Or contact us directly:",
+
   "footerNav": "Navigation",
   "footerLegal": "Legal",
   "footerTerms": "Terms of Service",
   "footerPrivacy": "Privacy Policy",
   "footerRights": "All rights reserved.",
-  "footerDev": "Developed with passion for aerial technology."
+  "footerDev": "Developed with passion for aerial technology.",
+
+  "lumaskyPageLink": "lumasky.html",
+  "galleryPhotosPageLink": "galeria-fotos.html",
+  "galleryVideosPageLink": "galeria-videos.html"
 }
