--- a/locales/es.json
+++ b/locales/es.json
@@ -1,61 +1,74 @@
 {
   "pageTitle": "DronyImagem - Soluciones con Drones",
-  "metaDescription": "Especialistas en filmación con drones, transmisión aérea en vivo y shows de drones con luces. Transforma tu evento en un espectáculo visual.",
-  "metaKeywords": "drone, filmación aérea, show de drones, drones luces, filmación con drone, mato grosso, cuiabá, dronyimagem, brasil",
+  "metaDescription": "Expertos en filmación com drones, transmisión aérea en vivo y shows de drones com luces. Transforma tu evento en un espectáculo visual.",
+  "metaKeywords": "dron, filmación aérea, show de drones, drones luces, filmación com dron, mato grosso, cuiaba, dronyimagem",
   "ogTitle": "DronyImagem - Soluciones con Drones",
-  "ogDescription": "Especialistas en filmación con drones, transmisión aérea en vivo y shows de drones con luces. Transforma tu evento en un espectáculo visual.",
+  "ogDescription": "Expertos en filmación com drones, transmisión aérea en vivo y shows de drones com luces. Transforma tu evento en un espectáculo visual.",
   "ogSiteName": "DronyImagem",
-  "headerLogo": "DronyImagem",
+
   "navSolutions": "Soluciones",
   "navPortfolio": "Portafolio",
-  "navAbout": "Sobre",
+  "navAbout": "Acerca de",
   "navValues": "Valores",
   "navMission": "Misión",
   "navLumasky": "Lumasky",
-  "navContact": "Contacto",
+  "navContact": "Contáctenos",
+
   "heroTitle": "VUELA ALTO<br />CREA VISIÓN",
-  "heroSubtitle": "DronyImagem es especialista en filmación con drones, transmisión aérea en vivo y shows de drones con luces, creando experiencias únicas que encantan al público y valoran tu marca.",
+  "heroSubtitle": "DronyImagem se especializa en filmación com drones, transmisión aérea en vivo y shows de drones com luces, creando experiencias únicas que cautivan al público y realzan su marca.",
   "heroButton": "Descubre Nuestras Soluciones",
-  "servicesTitle": "🚁 NUESTROS SERVICIOS",
-  "servicesSubtitle": "Del cielo a tu audiencia: filmación, transmisión y espectáculos.",
-  "serviceRealEstateTitle": "📸 Imágenes aéreas de inmuebles",
-  "serviceRealEstateDesc": "Valoriza tu inmueble o proyecto con fotos y videos aéreos de alta calidad. Destaca la ubicación, infraestructura y diferenciales de forma impactante para tus clientes.",
-  "serviceEventsTitle": "🎬 Videos aéreos de eventos",
-  "service2Desc": "Sorprende a tu público con una transmisión en vivo hecha por drones, mostrando tu evento en tiempo real con imágenes estables y de alta calidad. Perfecto para festivales, ferias, eventos deportivos y corporativos que necesitan impacto visual y cobertura completa.",
-  "serviceLumaskyTitle": "✨ Representante Lumasky en Brasil",
-  "service3Desc": "Encanta al público con un show de drones sincronizados con luces y música. Perfecto para aperturas de eventos, activaciones de marca, inauguraciones y celebraciones especiales. Cada show es planificado con guion, animaciones y coreografías exclusivas, convirtiendo el cielo en el escenario principal de tu evento.",
-  "portfolioTitle": "🎥 PORTAFOLIO / TRABAJOS",
-  "portfolioSubtitle": "Desde filmaciones aéreas hasta espectáculos de luces con drones, DronyImagem ha transformado eventos corporativos, festivales y producciones audiovisuales en experiencias visuales únicas. Revisa nuestros proyectos y ve cómo nuestras filmaciones aéreas y shows de drones impactan al público en cada detalle.",
-  "portfolioBtnPhotos": "📸 Galería de Fotos",
-  "portfolioBtnVideos": "🎬 Galería de Videos",
-  "aboutTitle": "🧭 SOBRE",
+
+  "servicesTitle": "Soluciones",
+  "servicesSubtitle": "Del cielo a tu público: filmación, transmisión y espectáculos.",
+  "serviceRealEstateTitle": "📸 Imágenes Aéreas de Inmuebles",
+  "serviceRealEstateDesc": "Valora tu propiedad o desarrollo com fotos y videos aéreos de alta calidad. Destaca la ubicación, infraestructura y diferenciales de manera impactante para tus clientes.",
+  "serviceEventsTitle": "🎬 Videos Aéreos de Eventos",
+  "service2Desc": "Sorprende a tu público com una transmisión en vivo realizada com drones, mostrando tu evento en tiempo real com imágenes estables y de alta calidad. Perfecto para festivales, ferias, eventos deportivos y corporativos que necesitan impacto visual y cobertura completa.",
+  "serviceLumaskyTitle": "✨ Representante de Lumasky en Brasil",
+  "service3Desc": "Deleita a la audiencia com un show de drones sincronizados com luces y música. Perfecto para aperturas de eventos, activaciones de marca, inauguraciones y celebraciones especiales. Cada show se planifica com un guion, animaciones y coreografías exclusivas, haciendo del cielo el escenario principal de tu evento.",
+
+  "portfolioTitle": "Portafolio",
+  "portfolioSubtitle": "Desde filmaciones aéreas hasta espectáculos de luces com drones, DronyImagem ha transformado eventos corporativos, festivales y producciones audiovisuales en experiencias visuales únicas. Descubre nuestros proyectos y comprueba cómo nuestras filmaciones aéreas y shows de drones impactan al público en cada detalle.",
+  "portfolioBtnPhotos": "📸 Galeria de Fotos",
+  "portfolioBtnVideos": "🎬 Galeria de Vídeos",
+
+  "aboutTitle": "Acerca de",
   "aboutSubtitle": "Tecnología, creatividad e innovación en el aire",
-  "aboutIntro": "Creado por dos hermanos matogrossenses fascinados por la tecnología y apasionados por la constante evolución.",
-  "aboutP1": "En DronyImagem, unimos filmación aérea profesional, transmisión de imágenes en vivo y shows de drones con luces sincronizadas para transformar eventos en experiencias memorables.",
-  "aboutP2": "Nuestro equipo está formado por profesionales especializados en audiovisual y pilotaje de drones, listos para registrar cada momento con calidad cinematográfica, seguridad y precisión técnica.",
-  "aboutP3": "Creemos que cada vuelo es una oportunidad para contar una nueva historia — desde el aire, con emoción e impacto. Con DronyImagem, tu evento gana una nueva perspectiva y la visibilidad que merece.",
-  "valuesTitle": "NUESTROS VALORES",
-  "valuesSubtitle": "Los principios que guían nuestra visión y excelencia en cada servicio.",
+  "aboutIntro": "Fundada por dos hermanos de Mato Grosso, fascinados por la tecnología y apasionados por la evolución constante.",
+  "aboutP1": "En DronyImagem, unimos filmación aérea profesional, transmisión de imágenes en vivo y shows de drones com luces sincronizadas para transformar eventos en experiencias memorables.",
+  "aboutP2": "Nuestro equipo está formado por profesionales especializados en audiovisuales y pilotaje de drones, listos para registrar cada momento com calidad cinematográfica, seguridad y precisión técnica.",
+  "aboutP3": "Creemos que cada vuelo es una oportunidad para contar una nueva historia — desde arriba, com emoción e impacto. Com DronyImagem, tu evento obtiene una nueva perspectiva y la visibilidad que se merece.",
+
+  "valuesTitle": "Valores",
+  "valuesSubtitle": "A continuación se presentan los puntos clave que guían nuestro valor de marca:",
   "value1Title": "Experiencias Memorables",
-  "value1Desc": "Unimos tecnología y creatividad para contar historias desde el aire. Transformamos tu evento en un espectáculo visual único que encanta y genera emoción.",
+  "value1Desc": "Combinamos tecnología y creatividad para contar historias desde arriba. Transformamos tu evento en un espectáculo visual único que encanta y genera emoción.",
   "value2Title": "Innovación y Tecnología",
-  "value2Desc": "Usamos tecnología aérea de punta—desde shows de luces hasta transmisiones en vivo—para dar a tu evento una nueva perspectiva y el impacto visual que merece.",
+  "value2Desc": "Utilizamos tecnología aérea de vanguardia, desde shows de luces hasta transmisiones en vivo, para darle a tu evento una nueva perspectiva y el impacto visual que se merece.",
   "value3Title": "Calidad y Seguridad",
-  "value3Desc": "Garantizamos precisión técnica y calidad cinematográfica en cada vuelo. Nuestro equipo especializado captura ángulos únicos con total seguridad, valorando tu marca.",
-  "missionTitle": "NUESTRA MISIÓN",
-  "missionSubtitle": "Ser el nexo entre el cielo y la visión creativa, elevando la percepción y el impacto de tus proyectos.",
-  "missionDesc": "Nuestra misión es transformar tu evento en un espectáculo visual memorable. Usamos tecnología aérea de punta—desde filmaciones cinematográficas hasta shows de luces—para contar tu historia desde el aire, con seguridad, creatividad e impacto.",
-  "contactTitle": "CONTACTO",
-  "contactSubtitle": "¡Hablemos sobre tu próximo proyecto aéreo!",
+  "value3Desc": "Garantizamos precisión técnica y calidad cinematográfica en cada vuelo. Nuestro equipo especializado captura ángulos únicos com total seguridad, valorando tu marca.",
+
+  "missionTitle": "Misión",
+  "missionSubtitle": "Ser una visión creativa desde arriba, elevando la percepción y el impacto de tus proyectos.",
+  "missionDesc": "Nuestra misión es transformar tu evento en un espectáculo visual memorable. Utilizamos tecnología aérea de vanguardia, desde filmaciones cinematográficas hasta shows de luces, para contar tu historia desde arriba, com seguridad, creatividad e impacto.",
+
+  "contactTitle": "CONTÁCTENOS",
+  "contactSubtitle": "¡Hablemos de tu próximo proyecto aéreo!",
   "formName": "Nombre:",
   "formEmail": "Correo electrónico:",
-  "formMessage": "Mensaje:",
+  "formPhone": "Teléfono:",
+  "formMessage": "Describe un poco tu evento o proyecto:",
   "formSubmit": "Enviar Mensaje",
   "contactAltText": "O contáctanos directamente:",
+
   "footerNav": "Navegación",
   "footerLegal": "Legal",
   "footerTerms": "Términos de Servicio",
   "footerPrivacy": "Política de Privacidad",
-  "footerRights": "Todos los derechos reservados.",
-  "footerDev": "Desarrollado con pasión por la tecnología aérea."
+  "footerRights": "Todos os derechos reservados.",
+  "footerDev": "Desarrollado com pasión por la tecnología aérea.",
+
+  "lumaskyPageLink": "lumasky.html",
+  "galleryPhotosPageLink": "galeria-fotos.html",
+  "galleryVideosPageLink": "galeria-videos.html"
 }
