feat: Update hero titles in multiple languages for consistency and improved punctuation

--- a/locales/en.json
+++ b/locales/en.json
@@ -14,7 +14,7 @@
   "navLumasky": "Lumasky",
   "navContact": "Contact Us",
 
-  "heroTitle": "FLY HIGH<br />CREATE VISION",
+  "heroTitle": "FLY HIGH,<br />CREATE VISION.",
   "heroSubtitle": "DronyImagem specializes in drone filming, aerial live streaming, and drone light shows, creating unique experiences that captivate audiences and enhance your brand.",
   "heroButton": "Discover Our Solutions",
 
