--- a/locales/es.json
+++ b/locales/es.json
@@ -14,7 +14,7 @@
   "navLumasky": "Lumasky",
   "navContact": "Contáctenos",
 
-  "heroTitle": "VUELA ALTO<br />CREA VISIÓN",
+  "heroTitle": "VUELA ALTO,<br />CREA VISIÓN.",
   "heroSubtitle": "DronyImagem se especializa en filmación com drones, transmisión aérea en vivo y shows de drones com luces, creando experiencias únicas que cautivan al público y realzan su marca.",
   "heroButton": "Descubre Nuestras Soluciones",
 
