--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -14,7 +14,7 @@
   "navLumasky": "Lumasky",
   "navContact": "Entre em Contato",
 
-  "heroTitle": "VOE ALTO<br />CRIE VISÃO",
+  "heroTitle": "VOE ALTO,<br />CRIE VISÃO.",
   "heroSubtitle": "A DronyImagem é especialista em filmagem com drones, transmissão ao vivo aérea e shows de drones com luzes, criando experiências únicas que encantam o público e valorizam sua marca.",
   "heroButton": "Descubra Nossas Soluções",
 
