fix: Correct punctuation in mission description for improved clarity in English and Portuguese localization

--- a/locales/en.json
+++ b/locales/en.json
@@ -50,7 +50,7 @@
 
   "missionTitle": "Mission",
   "missionSubtitle": "To be a creative vision from above, elevating the perception and impact of your projects.",
-  "missionDesc": "Our mission is to transform your event into a memorable visual spectacle. We use cutting-edge aerial technology, from cinematic filming to light shows—to tell your story from above, with safety, creativity, and impact.",
+  "missionDesc": "Our mission is to transform your event into a memorable visual spectacle. We use cutting-edge aerial technology, from cinematic filming to light shows to tell your story from above, with safety, creativity, and impact.",
 
   "contactTitle": "CONTACT US",
   "contactSubtitle": "Let's talk about your next aerial project!",
