--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -50,7 +50,7 @@
 
   "missionTitle": "Missão",
   "missionSubtitle": "Ser uma visão criativa a partir do alto, elevando a percepção e o impacto dos seus projetos.",
-  "missionDesc": "Nossa missão é transformar seu evento em um espetáculo visual memorável. Usamos tecnologia aérea de ponta, a partir de filmagens cinematográficas a shows de luzes—para contar sua história do alto, com segurança, criatividade e impacto.",
+  "missionDesc": "Nossa missão é transformar seu evento em um espetáculo visual memorável. Usamos tecnologia aérea de ponta, a partir de filmagens cinematográficas a shows de luzes para contar sua história do alto, com segurança, criatividade e impacto.",
 
   "contactTitle": "ENTRE EM CONTATO",
   "contactSubtitle": "Vamos conversar sobre o seu próximo projeto aéreo!",
