feat: Update meta descriptions in multiple languages for consistency and improved clarity

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,6 @@
 {
   "pageTitle": "DronyImagem - Drone Solutions",
-  "metaDescription": "Experts in drone filming, aerial live streaming, and drone light shows. Transform your event into a visual spectacle.",
+  "metaDescription": "Images | Event Videos | Drone Light Shows",
   "metaKeywords": "drone, aerial filming, drone show, light drones, drone footage, mato grosso, cuiaba, dronyimagem",
   "ogTitle": "DronyImagem - Drone Solutions",
   "ogDescription": "Experts in drone filming, aerial live streaming, and drone light shows. Transform your event into a visual spectacle.",
