--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -1,6 +1,6 @@
 {
   "pageTitle": "DronyImagem - Soluções com Drones",
-  "metaDescription": "Especialistas em filmagem com drones, transmissão ao vivo aérea e shows de drones com luzes. Transforme seu evento em um espetáculo visual.",
+  "metaDescription": "Imagens | Vídeos de Eventos | Show de Drones de Luz",
   "metaKeywords": "drone, filmagem aérea, show de drones, drones luzes, filmagem com drone, mato grosso, cuiabá, dronyimagem",
   "ogTitle": "DronyImagem - Soluções com Drones",
   "ogDescription": "Especialistas em filmagem com drones, transmissão ao vivo aérea e shows de drones com luzes. Transforme seu evento em um espetáculo visual.",
