--- a/locales/es.json
+++ b/locales/es.json
@@ -1,6 +1,6 @@
 {
   "pageTitle": "DronyImagem - Soluciones con Drones",
-  "metaDescription": "Expertos en filmación com drones, transmisión aérea en vivo y shows de drones com luces. Transforma tu evento en un espectáculo visual.",
+  "metaDescription": "Imágenes | Videos de Eventos | Shows de Drones con Luces",
   "metaKeywords": "dron, filmación aérea, show de drones, drones luces, filmación com dron, mato grosso, cuiaba, dronyimagem",
   "ogTitle": "DronyImagem - Soluciones con Drones",
   "ogDescription": "Expertos en filmación com drones, transmisión aérea en vivo y shows de drones com luces. Transforma tu evento en un espectáculo visual.",
