feat: Update Open Graph descriptions for consistency across languages and add new og-image.png

--- a/locales/es.json
+++ b/locales/es.json
@@ -3,7 +3,7 @@
   "metaDescription": "Imágenes | Videos de Eventos | Shows de Drones con Luces",
   "metaKeywords": "dron, filmación aérea, show de drones, drones luces, filmación com dron, mato grosso, cuiaba, dronyimagem",
   "ogTitle": "DronyImagem - Soluciones con Drones",
-  "ogDescription": "Expertos en filmación com drones, transmisión aérea en vivo y shows de drones com luces. Transforma tu evento en un espectáculo visual.",
+  "ogDescription": "Imágenes | Videos de Eventos | Shows de Drones con Luces",
   "ogSiteName": "DronyImagem",
 
   "navSolutions": "Soluciones",
