--- a/locales/en.json
+++ b/locales/en.json
@@ -3,7 +3,7 @@
   "metaDescription": "Images | Event Videos | Drone Light Shows",
   "metaKeywords": "drone, aerial filming, drone show, light drones, drone footage, mato grosso, cuiaba, dronyimagem",
   "ogTitle": "DronyImagem - Drone Solutions",
-  "ogDescription": "Experts in drone filming, aerial live streaming, and drone light shows. Transform your event into a visual spectacle.",
+  "ogDescription": "Images | Event Videos | Drone Light Shows",
   "ogSiteName": "DronyImagem",
 
   "navSolutions": "Solutions",
